--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
-httpx==0.25.2
-pytest==7.4.3
-pytest-asyncio==0.21.1
+fastapi
+uvicorn[standard]
+pydantic
+python-multipart
+python-jose[cryptography]
+passlib[bcrypt]
+python-dotenv
+httpx
+pytest
+pytest-asyncio
+langchain
+langchain-openai
+openai
