Test : The Pinacone connection established with API key and the index inspected

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: cra-assistant-api
     ports:
       - "8000:8000"
+    env_file:
+      - .env 
     environment:
       - PYTHONPATH=/app
       - ENVIRONMENT=production
