--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,10 @@ openai
 pinecone
 langchain-community
 sentence-transformers
+
+# Development dependencies
+flake8==6.1.0
+black==23.12.1
+isort==5.13.2
+mypy==1.8.0
+safety==2.3.5
